# library-ufc-championship

./: README.md
.github/workflows/: codspeed-rust.yml
collect/: Cargo.toml
collect/src/: lib.rs  main.rs  prelude.rs
collect/src/api_client/: mod.rs
collect/src/api_client/queries/: FetchLastRunId.gql  FetchLocalRunReport.gql  FetchRunReport.gql
rust/: Cargo.toml
rust/http_clients/: Cargo.toml
rust/serialization_deserialization/: Cargo.toml  large.rs  small.rs
rust/serialization_deserialization/benches/: small.rs
