[package]
name = "serialization_deserialization"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
simd-json = "0.15.1"
sonic-rs = "0.5.4"

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "small"
path = "small.rs"
harness = false

[[bench]]
name = "large"
path = "large.rs"
harness = false
